kubernetes/_base/automation/homebridge/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet # Adjust DNS policy when using host networking
      containers:
        - name: homebridge
          image: homebridge/homebridge:beta-2025-10-03
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 51826 # HomeKit API
            - containerPort: 8581 # Homebridge web UI
          volumeMounts:
            - mountPath: /homebridge
              name: homebridge
      volumes:
        - name: homebridge
          persistentVolumeClaim:
            claimName: homebridge
