kubernetes/_base/automation/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
spec:
  selector:
    app: homebridge
  ports:
    - name: web-ui
      protocol: TCP
      port: 8581
      targetPort: 8581
